--- a/templates/districts/branches/edit_branch.html
+++ b/templates/districts/branches/edit_branch.html
@@ -9,19 +9,7 @@
                 {% csrf_token %}
                 <div class="modal-body">
                   <input type="hidden" readonly id="branch_id" name="branch_id" value="{{branch.id}}" />
-                  <div class="row mb-3">
-                    <div class="col">
-                    <label class="form-label fw-bold">Section</label>
-                    <select class="form-select" id="section" name="section" required>
-                        <option value={{branch.section.id}}>{{branch.section.name}}</option>
-                        {% for section in sections %}
-                          {% if section.id != branch.section.id %}
-                            <option value={{section.id}}>{{section.name}}</option>
-                          {% endif %}
-                         {% endfor %}
-                      </select>
-                  </div>
-                </div>
+                  <input type="hidden" name="section_id" id="section_id" value="{{branch.section.id}}" readonly />
                   <div class="row mb-3">
                 <div class="col">
                   <label for="exampleInputPassword1" class="form-label fw-bold">Branch Name</label>
