--- a/templates/districts/edit_section_data.html
+++ b/templates/districts/edit_section_data.html
@@ -5,7 +5,7 @@
           <h1 class="modal-title fs-5 text-center fw-bold">Capture Section Data</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-            <form action="{% url 'edit-section-data' %}" method="POST" enctype="multipart/form-data">
+            <form action="#" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="modal-body">
                 <input type="hidden" name="report_id" id="report_id" value="{{section_report.report.id}}" readonly/>
